@@ -1,6 +1,6 @@
 # "dox/Make.dox-tail"
 # To be included last by Makefiles in subdirectories
-#	$Id: Make.dox-tail,v 1.15 2009/02/25 03:00:26 fang Exp $
+#	$Id: Make.dox-tail,v 1.16 2009/05/29 15:13:17 fang Exp $
 #	vim: ft=automake
 
 if AUTO_CVSIGNORE
@@ -16,6 +16,8 @@ if ENABLE_DOCS
 # don't bother if configured with --disable-docs
 noinst_DATA += $(HTML_HOOKS)
 # workaround: use install hooks
+EXTRA_DIST += $(HTML_HOOKS)
+
 install-data-hook: $(HTML_HOOKS)
 	$(mkdir_p) $(DESTDIR)$(htmldir) && \
 	for d in '$^' ; do \
