@@ -1,5 +1,12 @@
 # "dox/ChangeLog"
-#	$Id: ChangeLog,v 1.37 2009/02/28 01:20:34 fang Exp $
+#	$Id: ChangeLog,v 1.38 2009/05/29 15:13:15 fang Exp $
+
+2009-05-28	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-83-21:
+	  Distribute documentation so user need not build it, 
+		which removes some dependencies on doc tools.
+
 
 2009-02-27	David Fang		<fangism@users.sourceforge.net>
 
